# WaweKit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml  wawekit.spec
.github/workflows/: ci.yml
config/: default_settings.toml
docs/: FEATURES.md  PACKAGING.md  index.md
examples/example-plugin/: pyproject.toml
examples/example-plugin/example_plugin/: __init__.py
learning/module-01-architecture/: graphical_abstract.html  notes.md
learning/module-02-molecule-loading/: graphical_abstract.html  notes.md
learning/module-03-molecule-viewer/: graphical_abstract.html  notes.md
learning/module-04-standardization/: graphical_abstract.html  notes.md
learning/module-05-descriptors/: graphical_abstract.html  notes.md
learning/module-06-fingerprints/: graphical_abstract.html  notes.md
learning/module-07-similarity/: graphical_abstract.html  notes.md
learning/module-08-scaffold-analysis/: graphical_abstract.html  notes.md
learning/module-09-conformers/: graphical_abstract.html  notes.md
learning/module-10-chemical-space/: graphical_abstract.html  notes.md
learning/module-11-clustering/: graphical_abstract.html  notes.md
learning/module-12-substructure/: graphical_abstract.html  notes.md
learning/module-13-batch/: graphical_abstract.html  notes.md
learning/module-14-reports/: demo_report.html  graphical_abstract.html  notes.md
learning/module-15-settings/: graphical_abstract.html  notes.md
learning/module-16-plugin-system/: notes.md
learning/module-17-packaging/: notes.md
learning/module-18-documentation/: notes.md
learning/module-19-testing/: notes.md
learning/module-20-release-prep/: notes.md
learning/research-track-R1-protocol-engine/: demo_divergence.py  demo_output.txt  graphical_abstract.html  notes.md
learning/research-track-R2-to-R6-summary/: notes.md
learning/research-track-R5-benchmark/: analyse_sample.py  benchmark_output.txt  benchmark_results.csv  benchmark_set.smi  chembl_results.json  chembl_sample.json  chembl_sample.smi  chembl_sample_offsets.json  chembl_sensitivity_nostereo.json  fetch_chembl_sample.py
learning/research-track-R6-manuscript/: WaweKit_standardization_reproducibility_manuscript.docx  ai_writing_prompt.md  discussion_framing.md  make_docx.py  make_figures.py  manuscript_draft.md  manuscript_v2.md  manuscript_v2_sections.md  references.md  verify_numbers.py
learning/research-track-R7-downstream/: bioactivity_raw.json  downstream_impact.py  downstream_results.json  fetch_bioactivity.py  make_figure.py
learning/research-track-R8-software-paper/: WaweKit_SoftwareX_manuscript.docx  make_docx.py  make_screenshots.py  softwarex_manuscript.md
learning/research-track-R9-crosstoolkit/: crosstoolkit_experiment.py  crosstoolkit_results.json
samples/: demo_chemical_space.smi  demo_clustering.smi  demo_conformers.smi  demo_scaffolds.smi  demo_set.smi  demo_similarity.smi  demo_standardize.smi  demo_substructure.smi
src/wawekit/: __init__.py  __main__.py  app.py
src/wawekit/core/: __init__.py  config.py  constants.py  logging_config.py  paths.py
src/wawekit/gui/: __init__.py  icons.py  main_window.py
src/wawekit/gui/dialogs/: __init__.py  batch_dialog.py  chemical_space_dialog.py  clustering_dialog.py  conformer_dialog.py  converter_dialog.py  fingerprint_dialog.py  manual_dialog.py  report_dialog.py  reproducibility_dialog.py  settings_dialog.py  similarity_dialog.py  standardize_dialog.py  substructure_dialog.py
src/wawekit/gui/themes/: __init__.py  creme_coffee.qss  dark.qss  graphite.qss  gray.qss  light.qss  moderate.qss  nebula.qss  sahara.qss  theme_manager.py
src/wawekit/gui/widgets/: __init__.py  chemical_space_panel.py  conformer_panel.py  conformer_view.py  fingerprint_options.py  molecule_filter.py  molecule_table.py  property_filter_panel.py  reproducibility_panel.py  scaffold_panel.py  structure_delegate.py  structure_viewer.py  viewer_3d_panel.py
src/wawekit/models/: __init__.py  clustering.py  conformers.py  descriptors.py  fingerprints.py  molecule.py  scaffold.py  similarity.py  substructure.py
src/wawekit/plugins/: __init__.py  base.py  manager.py
src/wawekit/resources/: __init__.py
src/wawekit/resources/manual/: manual.html
src/wawekit/resources/web/: NOTICE-3Dmol.txt
src/wawekit/services/: __init__.py  batch.py  workers.py
src/wawekit/services/chemistry/: __init__.py  alerts.py  chemical_space.py  clustering.py  conformers.py  descriptors.py  fingerprints.py  scaffolds.py  similarity.py  standardizer.py  substructure.py
src/wawekit/services/io/: __init__.py  converter.py  molecule_exporter.py  molecule_loader.py
src/wawekit/services/rendering/: __init__.py  mol_renderer.py
src/wawekit/services/reporting/: __init__.py  html_writer.py  pdf_writer.py  report.py
src/wawekit/services/reproducibility/: __init__.py  benchmark.py  divergence.py  metrics.py  protocol.py  standardizers.py
tests/: conftest.py  test_alerts.py  test_batch.py  test_chemical_space.py  test_clustering.py  test_config.py  test_conformer_dialog.py  test_conformers.py  test_descriptors.py  test_fingerprint_dialog.py  test_fingerprint_options.py  test_fingerprints.py  test_icons.py  test_interface_equivalence.py  test_manual.py  test_mol_renderer.py  test_molecule_exporter.py  test_molecule_filter.py  test_molecule_loader.py  test_molecule_table.py  test_plugins.py  test_property_range_filter.py  test_reporting.py  test_reproducibility_benchmark.py  test_reproducibility_divergence.py  test_reproducibility_metrics.py  test_reproducibility_protocol.py  test_scaffold_panel.py  test_scaffolds.py  test_settings_dialog.py  test_similarity.py  test_similarity_dialog.py  test_smoke.py  test_standardizer.py  test_standardizers.py  test_structure_viewer.py  test_substructure.py  test_themes.py
